--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -285,7 +285,7 @@
 
             // Service Worker Registration (PWA)
             if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('/static/service-worker.js')
+                navigator.serviceWorker.register('/static/sw.js')
                     .then((registration) => {
                         console.log('Service Worker registered:', registration);
 
